  as in Octave/Matlab (left and right division)
- Remove the FGLS "arch" command from the GUI and add a deprecating
  note to its help text
- Lag specification for regressors (e.g. "foo(-1 to -2)"): the name of
  a list can now be substituted for the name of a series
- quantile() function: allow a vector for the second argument when the 
  first argument is a matrix
- Fix bug: wrong out-of-sample forecasts for ARMA models with seasonal
  MA terms
- Fix bug: wrong handling of string fields in ODBC data import
- Fix bug: spurious "unmatched 'if'" error under some conditions
- Fix bug: incorrect handling of observation markers in context of
  scatter plot "with factor separation"
- Fix bug: transposition not being done in expressions of the form
  matrix m = $accessor[range]', with trailing transpose symbol
- Fix bug: usable observations could be omitted when compacting from
  daily to weekly frequency, if the daily data contained "hidden"
  missing observations

2011-02-24 version 1.9.4
- Change the default random number generator from GLib's 
  implementation of the Mersenne Twister to the SIMD-oriented Fast 
  Mersenne Twister
- Introduce "addons": approved function packages that are represented
  in the GUI menus
- Add an --accessors option to the "varlist" command, to expose the 
  list of currently available accessor ("dollar") variables
- Add more panel data graphing options -- time-series of group means 
  and boxplots by group -- and redesign the GUI for panel plots
- GUI code: modify to allow building against gtk3, with a configure
  option --enable-gtk3
- GUI icon view: provide a graphical representation for saved 
  "bundles"
- GUI dialog for calling user-defined functions: several improvements
- GUI access to X-12-ARIMA: give option of writing and editing x12a 
  .spc file
- GUI test-statistic calculator: fix a bug in the one-variance test
- New accessor, $vma: retrieves the vector moving average form of a 
  VAR or VECM